Fantasy Real Estate Core Package/force-app/main/default/objects/Archive_Property__c/Archive_Property__c.object-meta.xml
<CustomObject>
    <label>Archive-Property</label>
    <nameField>
        <label>Archive-Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archive-Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>