Fantasy Real Estate Core Package/force-app/main/default/objects/Archive_Property__c/fields/Bidding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Bidding_Stage__c</fullName>
    <label>Bidding Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>