Fantasy Real Estate Core Package/force-app/main/default/objects/Archive_Property__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <label>Property Owner</label>
    <length>40</length>
    <type>Text</type>
</CustomField>