Fantasy Real Estate Core Package/force-app/main/default/objects/Archive_Property__c/fields/Realtor__c.field-meta.xml
<CustomField>
    <fullName>Realtor__c</fullName>
    <label>Realtor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>